@@ -119,7 +119,6 @@ function slick_hook_info() {
  * Implements hook_library().
  */
 function slick_library() {
-
   $slick_library_path = libraries_get_path('slick');
   $slick_module_path = drupal_get_path('module', 'slick');
   $info = system_get_info('module', 'slick');
@@ -232,7 +231,6 @@ function slick_libraries_info() {
     'version' => SLICK_VERSION,
     'version arguments' => array(
       'file' => 'slick/slick.js',
-      // 1.x.x: Version 1.3.8
       'pattern' => '/Version: (\d+\.\d+\.\d+)/',
     ),
     'files' => array(
@@ -243,21 +241,6 @@ function slick_libraries_info() {
         'slick/slick.css',
       ),
     ),
-    // @todo enable for libraries 3, see https://drupal.org/node/1855918
-    // 'integration files' => array(
-    // 'slick' => array(
-    // 'js' => array(
-    // 'js/slick.colorbox.js',
-    // 'js/slick.load.js',
-    // 'js/slick.media.js',
-    // ),
-    // 'css' => array(
-    // 'css/theme/slick.theme.css',
-    // 'css/components/slick.media.css',
-    // 'css/components/slick.colorbox.css',
-    // ),
-    // ),
-    // ),
   );
 
   // Alternative to jqeasing if using .make file.
@@ -283,7 +266,6 @@ function slick_libraries_info() {
     'download url' => 'https://github.com/brandonaaron/jquery-mousewheel/archive/master.zip',
     'version arguments' => array(
       'file' => 'jquery.mousewheel.js',
-      // 3.x.xx: Version: 3.1.11
       'pattern' => '/Version: (\d+\.\d+\.\d+)/',
     ),
     'files' => array(
