@@ -1,0 +1,80 @@
+<?php
+
+/**
+ * @file
+ */
+
+define('SLICK_DEVEL', variable_get('slick_devel', FALSE));
+define('SLICK_DEVEL_LOAD', variable_get('slick_devel_load', FALSE));
+
+/**
+ * Implements hook_menu().
+ */
+function slick_devel_menu() {
+  $items = array();
+
+  $items['admin/config/media/slick/devel'] = array(
+    'title' => 'Development',
+    'description' => 'Configure the Slick development module settings.',
+    'page callback' => 'drupal_get_form',
+    'page arguments' => array('slick_devel_form_settings'),
+    'access arguments' => array('administer slick'),
+    'type' => MENU_LOCAL_TASK,
+    'weight' => 2,
+    'file' => 'includes/slick_devel.admin.inc',
+  );
+
+  return $items;
+}
+
+
+/**
+ * Implements hook_library_alter().
+ */
+function slick_devel_library_alter(&$libraries, $module) {
+  if (SLICK_DEVEL) {
+    // Switch to the un-minified version of the library.
+    if ($module == 'slick' && isset($libraries['slick'])) {
+      $libraries['slick']['js'] = array(
+        libraries_get_path('slick') . '/slick/slick.js' => array(),
+      );
+    }
+
+    if (SLICK_DEVEL_LOAD) {
+      $path = drupal_get_path('module', 'slick_devel');
+      // Switch to the development version of the slick.load.js.
+      if ($module == 'slick' && isset($libraries['drupal.slick'])) {
+        $libraries['drupal.slick']['js'] = array(
+          $path . '/js/slick.load.devel.js' => array(),
+        );
+      }
+    }
+  }
+}
+
+/**
+ * Implements hook_libraries_info_alter().
+ */
+function slick_devel_libraries_info_alter(&$libraries) {
+  if (SLICK_DEVEL) {
+    // Switch to the un-minified version of the library.
+    if (isset($libraries['slick'])) {
+      $libraries['slick']['files']['js'] = array(
+        'slick/slick.js',
+      );
+    }
+  }
+}
+
+/**
+ * Implements hook_preprocess_HOOK().
+ */
+function slick_devel_preprocess_slick(&$variables) {
+  $element = $variables['element'];
+
+  if (isset($variables['attributes_array']['data-config'])) {
+    $variables['attributes_array']['data-slick'] = $variables['attributes_array']['data-config'];
+    unset($variables['attributes_array']['data-config']);
+    // kpr($variables);
+  }
+}
