@@ -1,5 +1,5 @@
 name = Slick Views
-description = "Adds a Views style plugin for Slick carousel"
+description = "Adds a Views style plugin for the Slick carousel."
 core = 7.x
 package = Slick
 
